2008-09-09  Dmitry Dulepov  <dmitry@typo3.org>

    * Fixed bug #9268: TCA is not loaded in FE when config cache is disabled

2008-09-08  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #3546: htmlArea RTE: wrong charset used by mb_regex in spell checker

2008-09-01  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9249: Misspelling in Install tool (thanks to Christian Kuhn)

2008-08-25  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #9196: In htmlArea RTE, unable to create an external URL containing german umlauts
	* Updated htmlArea RTE version to 1.5.7 for TYPO3 4.1.8

2008-08-21  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8826: calls to ini_set produces warnings

2008-08-20  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #5205: pi_loadLL() + no language file == full path disclosure

2008-08-18  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9141: Update Wizard uses wrong scheme to write compat_version to localconf.php
	* Fixed bug #9152: Deprecated code into stdgraphic

2008-08-11  Ingo Renner  <ingo@typo3.org>

	* Reverted Change from 2008-08-06 in t3lib_div leading to nonfunctional clipboard

2008-08-06  Ingo Renner  <ingo@typo3.org>

	* Fixed bug: PHP 5.3 throws a warning in class.t3lib_befunc.php on line 3348: trim() expects parameter 1 to be string, array given
	* Fixed bug: PHP 5.3 throws a deprecation warning in typo3/mod/tools/em/class.em_soap.php on lines 108, 112, 115, 213, 218: Assigning the return value of new by reference is deprecated
	* Fixed bug: PHP 5.3 throws a warning in class.t3lib_div.php on line 3286: strcmp() expects parameter 1 to be string, array given

2008-08-05  Dmitry Dulepov  <dmitry@typo3.org>

    * Fixed bug #6992: t3ib_refindex requires t3lib_BEfunc but does not include it

2008-08-01  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #9099: Wrong path to pages.gif in linkbrowser (Thanks to Xander Damen)

2008-07-30  Martin Kutschker  <martin.t.kutschker@blackbox.net>
