@@ -1,3 +1,7 @@
+2008-09-10  Dmitry Dulepov  <dmitry@typo3.org>
+
+	* Fixed bug #9315: Description of tslib_fe::includeTCA is incorrect
+
 2008-09-09  Dmitry Dulepov  <dmitry@typo3.org>
 
     * Fixed bug #9268: TCA is not loaded in FE when config cache is disabled
